fix a typo in file names

--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -18,8 +18,8 @@
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-11T03:39:05.949235Z",
-     "start_time": "2023-09-11T03:39:05.317163Z"
+     "end_time": "2023-09-11T03:50:57.310062Z",
+     "start_time": "2023-09-11T03:50:56.638055Z"
     }
    },
    "outputs": [],
@@ -71,8 +71,8 @@
    "id": "e0697560",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-11T03:39:05.957817Z",
-     "start_time": "2023-09-11T03:39:05.950559Z"
+     "end_time": "2023-09-11T03:50:57.319797Z",
+     "start_time": "2023-09-11T03:50:57.311379Z"
     }
    },
    "outputs": [],
@@ -529,8 +529,8 @@
    "id": "a46b12ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-11T03:39:05.990023Z",
-     "start_time": "2023-09-11T03:39:05.959667Z"
+     "end_time": "2023-09-11T03:50:57.347169Z",
+     "start_time": "2023-09-11T03:50:57.320587Z"
     }
    },
    "outputs": [],
@@ -982,8 +982,8 @@
    "id": "81e6222c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-11T03:39:06.945129Z",
-     "start_time": "2023-09-11T03:39:05.990843Z"
+     "end_time": "2023-09-11T03:50:58.124494Z",
+     "start_time": "2023-09-11T03:50:57.348085Z"
     }
    },
    "outputs": [
@@ -1100,8 +1100,8 @@
    "id": "474bcbf8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-11T03:39:07.528107Z",
-     "start_time": "2023-09-11T03:39:06.946043Z"
+     "end_time": "2023-09-11T03:50:58.710763Z",
+     "start_time": "2023-09-11T03:50:58.125329Z"
     }
    },
    "outputs": [
@@ -1198,8 +1198,8 @@
     "    plt.legend()\n",
     "    plt.savefig(r\"./ABIDE_simulations_linear/sim_linear_{outcome}.pdf\".format(\n",
     "        outcome=outcome),\n",
-    "        format=\"pdf\",\n",
-    "        dpi=600)\n",
+    "                format=\"pdf\",\n",
+    "                dpi=600)\n",
     "    plt.show()"
    ]
   },
@@ -1218,8 +1218,8 @@
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-11T03:39:07.533982Z",
-     "start_time": "2023-09-11T03:39:07.528871Z"
+     "end_time": "2023-09-11T03:50:58.716531Z",
+     "start_time": "2023-09-11T03:50:58.711583Z"
     }
    },
    "outputs": [],
@@ -1494,8 +1494,8 @@
    "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-11T03:39:07.549234Z",
-     "start_time": "2023-09-11T03:39:07.534750Z"
+     "end_time": "2023-09-11T03:50:58.743183Z",
+     "start_time": "2023-09-11T03:50:58.717067Z"
     }
    },
    "outputs": [],
@@ -1545,8 +1545,8 @@
    "id": "5230b75d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-11T03:39:07.559710Z",
-     "start_time": "2023-09-11T03:39:07.550193Z"
+     "end_time": "2023-09-11T03:50:58.754372Z",
+     "start_time": "2023-09-11T03:50:58.744456Z"
     }
    },
    "outputs": [],
@@ -1595,8 +1595,8 @@
    "id": "dfce6fd6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-11T03:39:07.576169Z",
-     "start_time": "2023-09-11T03:39:07.560455Z"
+     "end_time": "2023-09-11T03:50:58.770201Z",
+     "start_time": "2023-09-11T03:50:58.755034Z"
     }
    },
    "outputs": [],
@@ -1740,8 +1740,8 @@
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-11T03:39:07.607269Z",
-     "start_time": "2023-09-11T03:39:07.577943Z"
+     "end_time": "2023-09-11T03:50:58.801827Z",
+     "start_time": "2023-09-11T03:50:58.770865Z"
     }
    },
    "outputs": [],
@@ -2059,8 +2059,8 @@
    "id": "da95d107",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-11T03:39:07.627736Z",
-     "start_time": "2023-09-11T03:39:07.608212Z"
+     "end_time": "2023-09-11T03:50:58.823311Z",
+     "start_time": "2023-09-11T03:50:58.803312Z"
     }
    },
    "outputs": [],
@@ -2385,8 +2385,8 @@
    "id": "77de1868",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-11T03:39:09.189714Z",
-     "start_time": "2023-09-11T03:39:07.628571Z"
+     "end_time": "2023-09-11T03:51:00.382124Z",
+     "start_time": "2023-09-11T03:50:58.824063Z"
     }
    },
    "outputs": [
@@ -2560,8 +2560,8 @@
     "    ]:\n",
     "        if dep_measure == \"MI_epa_ISJ\":\n",
     "            plot_results(plt, fun_name, dep_measure=dep_measure)\n",
-    "            plt.savefig(r\"./ABIDE_predict_age/age_\" + fun_name + dep_measure +\n",
-    "                        \".pdf\",\n",
+    "            plt.savefig(r\"./ABIDE_predict_age/age_\" + fun_name + \"_\" +\n",
+    "                        dep_measure + \".pdf\",\n",
     "                        format=\"pdf\",\n",
     "                        dpi=600)\n",
     "            plt.show()"
@@ -2581,8 +2581,8 @@
    "id": "1e3ccaee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-11T03:39:10.681625Z",
-     "start_time": "2023-09-11T03:39:09.191119Z"
+     "end_time": "2023-09-11T03:51:01.845712Z",
+     "start_time": "2023-09-11T03:51:00.383023Z"
     }
    },
    "outputs": [
@@ -2758,7 +2758,7 @@
     "        if dep_measure == \"MI_epa_ISJ\":\n",
     "            plot_results(plt, fun_name, dep_measure=dep_measure)\n",
     "            plt.savefig(r\"./ABIDE_poly3_predict_age/poly3_age_\" + fun_name +\n",
-    "                        dep_measure + \".pdf\",\n",
+    "                        \"_\" + dep_measure + \".pdf\",\n",
     "                        format=\"pdf\",\n",
     "                        dpi=600)\n",
     "            plt.show()"
@@ -2784,8 +2784,8 @@
    "id": "6939ef62",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-11T03:39:10.698341Z",
-     "start_time": "2023-09-11T03:39:10.682416Z"
+     "end_time": "2023-09-11T03:51:01.863206Z",
+     "start_time": "2023-09-11T03:51:01.846462Z"
     }
    },
    "outputs": [],
@@ -3110,8 +3110,8 @@
    "id": "d1bc6195",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-11T03:39:10.719659Z",
-     "start_time": "2023-09-11T03:39:10.699167Z"
+     "end_time": "2023-09-11T03:51:01.893945Z",
+     "start_time": "2023-09-11T03:51:01.863954Z"
     }
    },
    "outputs": [],
@@ -3438,8 +3438,8 @@
    "id": "6920631b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-11T03:39:11.551614Z",
-     "start_time": "2023-09-11T03:39:10.720483Z"
+     "end_time": "2023-09-11T03:51:02.740247Z",
+     "start_time": "2023-09-11T03:51:01.894672Z"
     }
    },
    "outputs": [
@@ -3595,7 +3595,7 @@
     "        if dep_measure == \"MI_epa_ISJ\":\n",
     "            plot_results(plt, fun_name, dep_measure=dep_measure)\n",
     "            plt.savefig(r\"./ABIDE_predict_diagnosis/diagnosis_\" + fun_name +\n",
-    "                        dep_measure + \".pdf\",\n",
+    "                        \"_\" + dep_measure + \".pdf\",\n",
     "                        format=\"pdf\",\n",
     "                        dpi=600)\n",
     "            plt.show()"
@@ -3615,8 +3615,8 @@
    "id": "e899df18",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-11T03:39:12.363081Z",
-     "start_time": "2023-09-11T03:39:11.552541Z"
+     "end_time": "2023-09-11T03:51:03.527391Z",
+     "start_time": "2023-09-11T03:51:02.741121Z"
     }
    },
    "outputs": [
@@ -3770,7 +3770,7 @@
     "        if dep_measure == \"MI_epa_ISJ\":\n",
     "            plot_results(plt, fun_name, dep_measure=dep_measure)\n",
     "            plt.savefig(r\"./ABIDE_poly3_predict_diagnosis/poly3_diagnosis_\" +\n",
-    "                        fun_name + dep_measure + \".pdf\",\n",
+    "                        fun_name + \"_\" + dep_measure + \".pdf\",\n",
     "                        format=\"pdf\",\n",
     "                        dpi=600)\n",
     "            plt.show()"
@@ -3782,8 +3782,8 @@
    "id": "75a9b3a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-11T03:43:19.192316Z",
-     "start_time": "2023-09-11T03:39:12.363734Z"
+     "end_time": "2023-09-11T03:55:08.002268Z",
+     "start_time": "2023-09-11T03:51:03.528136Z"
     }
    },
    "outputs": [],
