adding some speed comparison codes

--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -18,8 +18,8 @@
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-14T17:01:53.356128Z",
-     "start_time": "2023-09-14T17:01:51.491121Z"
+     "end_time": "2023-09-15T05:42:24.315333Z",
+     "start_time": "2023-09-15T05:42:22.683194Z"
     }
    },
    "outputs": [],
@@ -71,8 +71,8 @@
    "id": "e0697560",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-14T17:01:53.453289Z",
-     "start_time": "2023-09-14T17:01:53.357864Z"
+     "end_time": "2023-09-15T05:42:24.431568Z",
+     "start_time": "2023-09-15T05:42:24.316969Z"
     }
    },
    "outputs": [],
@@ -529,8 +529,8 @@
    "id": "a46b12ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-14T17:01:53.576509Z",
-     "start_time": "2023-09-14T17:01:53.454850Z"
+     "end_time": "2023-09-15T05:42:24.513604Z",
+     "start_time": "2023-09-15T05:42:24.433048Z"
     }
    },
    "outputs": [],
@@ -982,8 +982,8 @@
    "id": "81e6222c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-14T17:01:54.588699Z",
-     "start_time": "2023-09-14T17:01:53.578205Z"
+     "end_time": "2023-09-15T05:42:25.392316Z",
+     "start_time": "2023-09-15T05:42:24.515125Z"
     }
    },
    "outputs": [
@@ -1093,8 +1093,8 @@
    "id": "474bcbf8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-14T17:01:55.061352Z",
-     "start_time": "2023-09-14T17:01:54.589689Z"
+     "end_time": "2023-09-15T05:42:25.868952Z",
+     "start_time": "2023-09-15T05:42:25.393536Z"
     }
    },
    "outputs": [
@@ -1205,8 +1205,8 @@
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-14T17:01:55.094121Z",
-     "start_time": "2023-09-14T17:01:55.062180Z"
+     "end_time": "2023-09-15T05:42:25.894389Z",
+     "start_time": "2023-09-15T05:42:25.869771Z"
     }
    },
    "outputs": [],
@@ -1466,6 +1466,217 @@
   },
   {
    "cell_type": "markdown",
+   "id": "770cd5c3",
+   "metadata": {},
+   "source": [
+    "# Testing Speed for MI Estimation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "464db6ba",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-15T05:42:25.914572Z",
+     "start_time": "2023-09-15T05:42:25.895636Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "\n",
+    "def engine_and_share_memory_status(mem_setting):\n",
+    "    if mem_setting == \"high_mem\":\n",
+    "        return \"c\", False\n",
+    "    elif mem_setting == \"share_mem\":\n",
+    "        return \"c\", True\n",
+    "    elif mem_setting == \"dask\":\n",
+    "        return \"dask\", False\n",
+    "\n",
+    "\n",
+    "def job_generator(mem_setting, outcome):\n",
+    "    py_1 = r\"\"\"import numpy as np\n",
+    "import pandas as pd\n",
+    "from dask import dataframe as dd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.stats import kendalltau, rankdata, norm\n",
+    "import fastHDMI as mi\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.preprocessing import StandardScaler, SplineTransformer\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.linear_model import LassoCV, ElasticNetCV, RidgeCV, LarsCV, LassoLarsCV, LogisticRegressionCV, LinearRegression, LogisticRegression\n",
+    "from sklearn.neural_network import MLPRegressor, MLPClassifier\n",
+    "from sklearn.ensemble import RandomForestRegressor, RandomForestClassifier\n",
+    "from sklearn.metrics import r2_score, roc_auc_score\n",
+    "import multiprocess as mp\n",
+    "from tqdm import tqdm\n",
+    "import os\n",
+    "import timeit\n",
+    "\n",
+    "csv_file = os.environ[\"SLURM_TMPDIR\"] + \\\n",
+    "    r\"/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
+    "# abide = pd.read_csv(csv_file, encoding=\"unicode_escape\", engine=\"c\")\n",
+    "abide = dd.read_csv(csv_file, sample=1250000)\n",
+    "\n",
+    "# _abide_name = abide.columns.tolist()[1:]\n",
+    "_abide_name = list(abide.columns)[1:]\n",
+    "\n",
+    "# print(_abide_name)\n",
+    "\n",
+    "# we don't inlcude age and sex in the screening since we choose to always include them in the model\n",
+    "\"\"\"\n",
+    "    if outcome == \"age\":\n",
+    "        py_2 = r\"\"\"\n",
+    "# age\n",
+    "abide_name = [_abide_name[-3]] + _abide_name[1:-3]\n",
+    "# so that the left first column is the outcome and the rest columns are areas\n",
+    "del _abide_name\n",
+    "\n",
+    "num_input_vars_divide = 10\n",
+    "prop_input_vars_list = np.linspace(0, 1, num_input_vars_divide)[1:]\n",
+    "\n",
+    "\n",
+    "def _get_computing_time(prop_input_vars):\n",
+    "    s = '''mi.continuous_screening_csv_parallel(csv_file, _usecols=abide_name.copy()[0:int(len(abide_name)*prop_input_vars)], csv_engine=\"{_csv_engine}\", sample=1250000, multp=10, core_num=16, share_memory={_share_mem_status}, kernel=\"epa\", bw=\"ISJ\", norm=2)'''\n",
+    "    imports_and_vars = globals()\n",
+    "    imports_and_vars.update(locals())\n",
+    "    num_loops = timeit.Timer(stmt=s, globals=imports_and_vars).autorange()[0]\n",
+    "    FFTKDE_MI_times = timeit.Timer(stmt=s, globals=imports_and_vars).repeat(\n",
+    "        repeat=7, number=num_loops)\n",
+    "\n",
+    "    s = '''mi.continuous_skMI_screening_csv_parallel(csv_file, _usecols=abide_name.copy()[0:int(len(abide_name)*prop_input_vars)], csv_engine=\"{_csv_engine}\", sample=1250000, multp=10, core_num=16, random_state=0, share_memory={_share_mem_status})'''\n",
+    "    imports_and_vars = globals()\n",
+    "    imports_and_vars.update(locals())\n",
+    "    num_loops = timeit.Timer(stmt=s, globals=imports_and_vars).autorange()[0]\n",
+    "    sklearn_MI_times = timeit.Timer(stmt=s, globals=imports_and_vars).repeat(\n",
+    "        repeat=7, number=num_loops)\n",
+    "\n",
+    "    s = '''pearson_output = mi.Pearson_screening_csv_parallel(csv_file, _usecols=abide_name.copy()[0:int(len(abide_name)*prop_input_vars)], csv_engine=\"{_csv_engine}\", sample=1250000, multp=10, core_num=16, share_memory={_share_mem_status})'''\n",
+    "    imports_and_vars = globals()\n",
+    "    imports_and_vars.update(locals())\n",
+    "    num_loops = timeit.Timer(stmt=s, globals=imports_and_vars).autorange()[0]\n",
+    "    Pearson_times = timeit.Timer(stmt=s, globals=imports_and_vars).repeat(\n",
+    "        repeat=7, number=num_loops)\n",
+    "\n",
+    "    return np.vstack((FFTKDE_MI_times, sklearn_MI_times, Pearson_times))\n",
+    "\n",
+    "\n",
+    "output_array = np.array(list(map(_get_computing_time, prop_input_vars_list)))\n",
+    "np.save(r\"./running_time_age\", output_array)\n",
+    "\"\"\".format(_csv_engine=engine_and_share_memory_status(mem_setting)[0],\n",
+    "           _share_mem_status=engine_and_share_memory_status(mem_setting)[1],\n",
+    "           mem_setting=mem_setting)\n",
+    "    elif outcome == \"diagnosis\":\n",
+    "        py_2 = r\"\"\"\n",
+    "# diagnosis\n",
+    "abide_name = [_abide_name[-1]] + _abide_name[1:-3]\n",
+    "# so that the left first column is the outcome and the rest columns are areas\n",
+    "del _abide_name\n",
+    "\n",
+    "num_input_vars_divide = 10\n",
+    "prop_input_vars_list = np.linspace(0, 1, num_input_vars_divide)[1:]\n",
+    "\n",
+    "\n",
+    "def _get_computing_time(prop_input_vars):\n",
+    "    s = '''mi.binary_screening_csv_parallel(csv_file,_usecols=abide_name.copy()[0:int(len(abide_name)*prop_input_vars)],csv_engine=\"{_csv_engine}\",sample=1250000,multp=10,core_num=16,share_memory={_share_mem_status},kernel=\"epa\",bw=\"ISJ\")'''\n",
+    "    imports_and_vars = globals()\n",
+    "    imports_and_vars.update(locals())\n",
+    "    num_loops = timeit.Timer(stmt=s, globals=imports_and_vars).autorange()[0]\n",
+    "    FFTKDE_MI_times = timeit.Timer(stmt=s, globals=imports_and_vars).repeat(\n",
+    "        repeat=7, number=num_loops)\n",
+    "\n",
+    "    s = '''mi.binary_skMI_screening_csv_parallel(csv_file,_usecols=abide_name.copy()[0:int(len(abide_name)*prop_input_vars)],csv_engine=\"{_csv_engine}\",sample=1250000,multp=10,core_num=16,random_state=0,share_memory={_share_mem_status})'''\n",
+    "    imports_and_vars = globals()\n",
+    "    imports_and_vars.update(locals())\n",
+    "    num_loops = timeit.Timer(stmt=s, globals=imports_and_vars).autorange()[0]\n",
+    "    sklearn_MI_times = timeit.Timer(stmt=s, globals=imports_and_vars).repeat(\n",
+    "        repeat=7, number=num_loops)\n",
+    "\n",
+    "    s = '''pearson_output = mi.Pearson_screening_csv_parallel( csv_file, _usecols=abide_name.copy()[0:int(len(abide_name)*prop_input_vars)], csv_engine=\"{_csv_engine}\", sample=1250000, multp=10, core_num=16, share_memory={_share_mem_status})'''\n",
+    "    imports_and_vars = globals()\n",
+    "    imports_and_vars.update(locals())\n",
+    "    num_loops = timeit.Timer(stmt=s, globals=imports_and_vars).autorange()[0]\n",
+    "    Pearson_times = timeit.Timer(stmt=s, globals=imports_and_vars).repeat(\n",
+    "        repeat=7, number=num_loops)\n",
+    "\n",
+    "    return np.vstack((FFTKDE_MI_times, sklearn_MI_times, Pearson_times))\n",
+    "\n",
+    "\n",
+    "output_array = np.array(list(map(_get_computing_time, prop_input_vars_list)))\n",
+    "np.save(r\"./running_time_diagnosis\", output_array)\n",
+    "\"\"\".format(_csv_engine=engine_and_share_memory_status(mem_setting)[0],\n",
+    "           _share_mem_status=engine_and_share_memory_status(mem_setting)[1],\n",
+    "           mem_setting=mem_setting)\n",
+    "\n",
+    "    Path(r\"./running_speed/speed_comparison_\" + outcome + \"_\" + mem_setting +\n",
+    "         \".py\").touch()\n",
+    "    py_script = open(\n",
+    "        r\"./running_speed/speed_comparison_\" + outcome + \"_\" + mem_setting +\n",
+    "        \".py\", \"w\")\n",
+    "    py_script.write(py_1 + py_2)\n",
+    "\n",
+    "    Path(r\"./running_speed/speed_comparison_\" + outcome + \"_\" + mem_setting +\n",
+    "         \".sh\").touch()\n",
+    "    bash_script = open(\n",
+    "        r\"./running_speed/speed_comparison_\" + outcome + \"_\" + mem_setting +\n",
+    "        \".sh\", \"w\")\n",
+    "    bash_script.write(r\"\"\"#!/bin/bash\n",
+    "#SBATCH --account=def-masd\n",
+    "#SBATCH --nodes=1\n",
+    "#SBATCH --cpus-per-task=16\n",
+    "#SBATCH --mem=80G\n",
+    "#SBATCH --time=6-12:00:00\n",
+    "#SBATCH --job-name=ABIDE_screening_{outcome}_{mem_setting}\n",
+    "\n",
+    "module load arch/avx2 gcc llvm rust arrow cuda nodejs python/3.8.10 r/4.0.2 python-build-bundle\n",
+    "\n",
+    "virtualenv --no-download $SLURM_TMPDIR/env\n",
+    "source $SLURM_TMPDIR/env/bin/activate\n",
+    "pip install --no-index --upgrade pip Cython\n",
+    "\n",
+    "# ### run this block at the login node to build wheels\n",
+    "# module load arch/avx2 gcc llvm rust arrow cuda nodejs python/3.8.10 r/4.0.2 python-build-bundle\n",
+    "# ### upgrading the tools\n",
+    "# pip install --upgrade pip setuptools wheel\n",
+    "# ### remove all old wheels\n",
+    "# rm *.whl\n",
+    "# ### get wheels builder\n",
+    "# git clone https://github.com/ComputeCanada/wheels_builder\n",
+    "# export PATH=$PATH:${{HOME}}/wheels_builder\n",
+    "# ### build KDEpy 1.1.5\n",
+    "# ${{HOME}}/wheels_builder/unmanylinuxize.sh --package KDEpy --version 1.1.5 --python 3.8,3.9,3.10 --find_links https://files.pythonhosted.org/packages/\n",
+    "# ### built nonconvexAG 1.0.6\n",
+    "# ${{HOME}}/wheels_builder/unmanylinuxize.sh --package nonconvexAG --version 1.0.6 --python 3.8,3.9,3.10 --find_links https://files.pythonhosted.org/packages/\n",
+    "# ### built fastHDMI 1.23.28\n",
+    "# pip install fastHDMI==1.23.28 --no-cache-dir\n",
+    "# pip wheel fastHDMI --no-deps\n",
+    "\n",
+    "# # Here basically to build the packages at login node and install them in slurm job submission locally\n",
+    "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2 pandas dask Cython\n",
+    "pip install --no-index /home/kyang/KDEpy-1.1.5+computecanada-cp38-cp38-linux_x86_64.whl\n",
+    "pip install --no-index /home/kyang/nonconvexAG-1.0.6+computecanada-py3-none-any.whl\n",
+    "pip install --no-index /home/kyang/fastHDMI-1.23.28-cp38-cp38-linux_x86_64.whl\n",
+    "\n",
+    "nvidia-smi\n",
+    "lscpu\n",
+    "\n",
+    "echo \"running ABIDE_screening_{outcome}_{mem_setting}.py\"\n",
+    "\n",
+    "cp /home/kyang/projects/def-cgreenwo/abide_data/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv $SLURM_TMPDIR/\n",
+    "\n",
+    "python3 speed_comparison_{outcome}_{mem_setting}.py\n",
+    "\"\"\".format(outcome=outcome, mem_setting=mem_setting))\n",
+    "\n",
+    "\n",
+    "for mem_setting in [\"high_mem\", \"share_mem\"]:\n",
+    "    for outcome in [\"age\", \"diagnosis\"]:\n",
+    "        job_generator(mem_setting=mem_setting, outcome=outcome)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "46ea4ca1-abfd-4856-8f70-63658655173a",
    "metadata": {},
    "source": [
@@ -1477,12 +1688,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-14T17:01:55.096330Z",
-     "start_time": "2023-09-14T17:01:55.094748Z"
+     "end_time": "2023-09-15T05:42:25.918274Z",
+     "start_time": "2023-09-15T05:42:25.915328Z"
     }
    },
    "outputs": [],
@@ -1528,12 +1739,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "5230b75d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-14T17:01:55.098802Z",
-     "start_time": "2023-09-14T17:01:55.097225Z"
+     "end_time": "2023-09-15T05:42:25.922717Z",
+     "start_time": "2023-09-15T05:42:25.919407Z"
     }
    },
    "outputs": [],
@@ -1578,12 +1789,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "dfce6fd6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-14T17:01:55.106664Z",
-     "start_time": "2023-09-14T17:01:55.099457Z"
+     "end_time": "2023-09-15T05:42:25.935811Z",
+     "start_time": "2023-09-15T05:42:25.926202Z"
     }
    },
    "outputs": [],
@@ -1723,12 +1934,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-14T17:01:56.013838Z",
-     "start_time": "2023-09-14T17:01:55.108874Z"
+     "end_time": "2023-09-15T05:42:27.270491Z",
+     "start_time": "2023-09-15T05:42:25.936775Z"
     }
    },
    "outputs": [],
@@ -2042,12 +2253,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "da95d107",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-14T17:01:57.278577Z",
-     "start_time": "2023-09-14T17:01:56.017606Z"
+     "end_time": "2023-09-15T05:42:28.620798Z",
+     "start_time": "2023-09-15T05:42:27.275739Z"
     }
    },
    "outputs": [],
@@ -2368,12 +2579,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "77de1868",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-14T17:01:59.272781Z",
-     "start_time": "2023-09-14T17:01:57.283219Z"
+     "end_time": "2023-09-15T05:42:30.783914Z",
+     "start_time": "2023-09-15T05:42:28.624341Z"
     }
    },
    "outputs": [
@@ -2564,12 +2775,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "1e3ccaee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-14T17:02:01.208383Z",
-     "start_time": "2023-09-14T17:01:59.273842Z"
+     "end_time": "2023-09-15T05:42:32.778331Z",
+     "start_time": "2023-09-15T05:42:30.784702Z"
     }
    },
    "outputs": [
@@ -2767,12 +2978,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "6939ef62",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-14T17:02:01.767857Z",
-     "start_time": "2023-09-14T17:02:01.209318Z"
+     "end_time": "2023-09-15T05:42:33.696652Z",
+     "start_time": "2023-09-15T05:42:32.779283Z"
     }
    },
    "outputs": [],
@@ -3093,12 +3304,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "d1bc6195",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-14T17:02:02.466614Z",
-     "start_time": "2023-09-14T17:02:01.770648Z"
+     "end_time": "2023-09-15T05:42:34.694449Z",
+     "start_time": "2023-09-15T05:42:33.699669Z"
     }
    },
    "outputs": [],
@@ -3421,12 +3632,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "6920631b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-14T17:02:03.579249Z",
-     "start_time": "2023-09-14T17:02:02.469294Z"
+     "end_time": "2023-09-15T05:42:35.830994Z",
+     "start_time": "2023-09-15T05:42:34.697477Z"
     }
    },
    "outputs": [
@@ -3598,12 +3809,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "e899df18",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-14T17:02:04.638522Z",
-     "start_time": "2023-09-14T17:02:03.580303Z"
+     "end_time": "2023-09-15T05:42:36.856669Z",
+     "start_time": "2023-09-15T05:42:35.831753Z"
     }
    },
    "outputs": [
@@ -3765,12 +3976,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "75a9b3a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-14T17:07:56.597292Z",
-     "start_time": "2023-09-14T17:02:04.639280Z"
+     "end_time": "2023-09-15T05:48:44.367606Z",
+     "start_time": "2023-09-15T05:42:36.857465Z"
     }
    },
    "outputs": [],
