fix a bug in naming of the saving numpy arrays

--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -18,8 +18,8 @@
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-15T05:42:24.315333Z",
-     "start_time": "2023-09-15T05:42:22.683194Z"
+     "end_time": "2023-09-15T05:59:53.800615Z",
+     "start_time": "2023-09-15T05:59:51.826261Z"
     }
    },
    "outputs": [],
@@ -71,8 +71,8 @@
    "id": "e0697560",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-15T05:42:24.431568Z",
-     "start_time": "2023-09-15T05:42:24.316969Z"
+     "end_time": "2023-09-15T05:59:53.945553Z",
+     "start_time": "2023-09-15T05:59:53.801618Z"
     }
    },
    "outputs": [],
@@ -529,8 +529,8 @@
    "id": "a46b12ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-15T05:42:24.513604Z",
-     "start_time": "2023-09-15T05:42:24.433048Z"
+     "end_time": "2023-09-15T05:59:54.036662Z",
+     "start_time": "2023-09-15T05:59:53.946964Z"
     }
    },
    "outputs": [],
@@ -982,8 +982,8 @@
    "id": "81e6222c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-15T05:42:25.392316Z",
-     "start_time": "2023-09-15T05:42:24.515125Z"
+     "end_time": "2023-09-15T05:59:54.996601Z",
+     "start_time": "2023-09-15T05:59:54.038115Z"
     }
    },
    "outputs": [
@@ -1093,8 +1093,8 @@
    "id": "474bcbf8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-15T05:42:25.868952Z",
-     "start_time": "2023-09-15T05:42:25.393536Z"
+     "end_time": "2023-09-15T05:59:55.517953Z",
+     "start_time": "2023-09-15T05:59:54.997663Z"
     }
    },
    "outputs": [
@@ -1205,8 +1205,8 @@
    "id": "75940522",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-15T05:42:25.894389Z",
-     "start_time": "2023-09-15T05:42:25.869771Z"
+     "end_time": "2023-09-15T05:59:55.553913Z",
+     "start_time": "2023-09-15T05:59:55.520304Z"
     }
    },
    "outputs": [],
@@ -1469,7 +1469,7 @@
    "id": "770cd5c3",
    "metadata": {},
    "source": [
-    "# Testing Speed for MI Estimation"
+    "# Running Speed Comparison for MI Estimation"
    ]
   },
   {
@@ -1478,8 +1478,8 @@
    "id": "464db6ba",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-15T05:42:25.914572Z",
-     "start_time": "2023-09-15T05:42:25.895636Z"
+     "end_time": "2023-09-15T05:59:55.579644Z",
+     "start_time": "2023-09-15T05:59:55.555182Z"
     }
    },
    "outputs": [],
@@ -1564,7 +1564,7 @@
     "\n",
     "\n",
     "output_array = np.array(list(map(_get_computing_time, prop_input_vars_list)))\n",
-    "np.save(r\"./running_time_age\", output_array)\n",
+    "np.save(r\"./running_time_age_{mem_setting}\", output_array)\n",
     "\"\"\".format(_csv_engine=engine_and_share_memory_status(mem_setting)[0],\n",
     "           _share_mem_status=engine_and_share_memory_status(mem_setting)[1],\n",
     "           mem_setting=mem_setting)\n",
@@ -1605,7 +1605,7 @@
     "\n",
     "\n",
     "output_array = np.array(list(map(_get_computing_time, prop_input_vars_list)))\n",
-    "np.save(r\"./running_time_diagnosis\", output_array)\n",
+    "np.save(r\"./running_time_diagnosis_{mem_setting}\", output_array)\n",
     "\"\"\".format(_csv_engine=engine_and_share_memory_status(mem_setting)[0],\n",
     "           _share_mem_status=engine_and_share_memory_status(mem_setting)[1],\n",
     "           mem_setting=mem_setting)\n",
@@ -1692,8 +1692,8 @@
    "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-15T05:42:25.918274Z",
-     "start_time": "2023-09-15T05:42:25.915328Z"
+     "end_time": "2023-09-15T05:59:55.582325Z",
+     "start_time": "2023-09-15T05:59:55.580695Z"
     }
    },
    "outputs": [],
@@ -1743,8 +1743,8 @@
    "id": "5230b75d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-15T05:42:25.922717Z",
-     "start_time": "2023-09-15T05:42:25.919407Z"
+     "end_time": "2023-09-15T05:59:55.584734Z",
+     "start_time": "2023-09-15T05:59:55.583191Z"
     }
    },
    "outputs": [],
@@ -1793,8 +1793,8 @@
    "id": "dfce6fd6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-15T05:42:25.935811Z",
-     "start_time": "2023-09-15T05:42:25.926202Z"
+     "end_time": "2023-09-15T05:59:55.596891Z",
+     "start_time": "2023-09-15T05:59:55.585590Z"
     }
    },
    "outputs": [],
@@ -1938,8 +1938,8 @@
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-15T05:42:27.270491Z",
-     "start_time": "2023-09-15T05:42:25.936775Z"
+     "end_time": "2023-09-15T05:59:56.928707Z",
+     "start_time": "2023-09-15T05:59:55.597967Z"
     }
    },
    "outputs": [],
@@ -2257,8 +2257,8 @@
    "id": "da95d107",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-15T05:42:28.620798Z",
-     "start_time": "2023-09-15T05:42:27.275739Z"
+     "end_time": "2023-09-15T05:59:58.254040Z",
+     "start_time": "2023-09-15T05:59:56.932083Z"
     }
    },
    "outputs": [],
@@ -2583,8 +2583,8 @@
    "id": "77de1868",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-15T05:42:30.783914Z",
-     "start_time": "2023-09-15T05:42:28.624341Z"
+     "end_time": "2023-09-15T06:00:00.284855Z",
+     "start_time": "2023-09-15T05:59:58.256660Z"
     }
    },
    "outputs": [
@@ -2779,8 +2779,8 @@
    "id": "1e3ccaee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-15T05:42:32.778331Z",
-     "start_time": "2023-09-15T05:42:30.784702Z"
+     "end_time": "2023-09-15T06:00:02.144298Z",
+     "start_time": "2023-09-15T06:00:00.287111Z"
     }
    },
    "outputs": [
@@ -2982,8 +2982,8 @@
    "id": "6939ef62",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-15T05:42:33.696652Z",
-     "start_time": "2023-09-15T05:42:32.779283Z"
+     "end_time": "2023-09-15T06:00:02.981064Z",
+     "start_time": "2023-09-15T06:00:02.145095Z"
     }
    },
    "outputs": [],
@@ -3308,8 +3308,8 @@
    "id": "d1bc6195",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-15T05:42:34.694449Z",
-     "start_time": "2023-09-15T05:42:33.699669Z"
+     "end_time": "2023-09-15T06:00:04.062327Z",
+     "start_time": "2023-09-15T06:00:02.985725Z"
     }
    },
    "outputs": [],
@@ -3636,8 +3636,8 @@
    "id": "6920631b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-15T05:42:35.830994Z",
-     "start_time": "2023-09-15T05:42:34.697477Z"
+     "end_time": "2023-09-15T06:00:05.150000Z",
+     "start_time": "2023-09-15T06:00:04.064196Z"
     }
    },
    "outputs": [
@@ -3813,8 +3813,8 @@
    "id": "e899df18",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-15T05:42:36.856669Z",
-     "start_time": "2023-09-15T05:42:35.831753Z"
+     "end_time": "2023-09-15T06:00:06.160806Z",
+     "start_time": "2023-09-15T06:00:05.150770Z"
     }
    },
    "outputs": [
@@ -3980,8 +3980,8 @@
    "id": "75a9b3a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-15T05:48:44.367606Z",
-     "start_time": "2023-09-15T05:42:36.857465Z"
+     "end_time": "2023-09-15T06:05:56.931595Z",
+     "start_time": "2023-09-15T06:00:06.161647Z"
     }
    },
    "outputs": [],
