--- a/pyFFTW tests.ipynb
+++ b/pyFFTW tests.ipynb
@@ -15,7 +15,9 @@
     "import numpy as np\n",
     "from scipy import fft\n",
     "import pyfftw\n",
-    "pyfftw.interfaces.cache.enable() # turn on cache to make it run much faster on x86_64 machines, not sure about ARM "
+    "\n",
+    "pyfftw.interfaces.cache.enable(\n",
+    ")  # turn on cache to make it run much faster on x86_64 machines, not sure about ARM"
    ]
   },
   {
@@ -42,7 +44,8 @@
    ],
    "source": [
     "A = np.random.rand(1000, 1000)\n",
-    "%timeit np.fft.fft2(A) \n",
+    "\n",
+    "%timeit np.fft.fft2(A)\n",
     "%timeit fft.fft2(A)\n",
     "%timeit pyfftw.interfaces.numpy_fft.fft2(A)\n",
     "%timeit pyfftw.interfaces.scipy_fft.fft2(A)"
