add a summarizing function

--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -11599,6 +11599,93 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bf77beab-7667-4564-85bc-335230616f31",
+   "metadata": {},
+   "source": [
+    "# a summary function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49cd85a4-e170-46e9-9fe4-9d85e859317a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function_mapping = {\n",
+    "    \"continuous_screening_plink\":\n",
+    "        continuous_screening_plink_parallel,\n",
+    "    \"binary_screening_plink\":\n",
+    "        binary_screening_plink_parallel,\n",
+    "    \"binary_screening_csv\":\n",
+    "        binary_screening_csv_parallel,\n",
+    "    \"continuous_screening_csv\":\n",
+    "        continuous_screening_csv_parallel,\n",
+    "    \"binning_binary_screening_csv\":\n",
+    "        binning_binary_screening_csv_parallel,\n",
+    "    \"binning_continuous_screening_csv\":\n",
+    "        binning_continuous_screening_csv_parallel,\n",
+    "    \"binary_skMI_screening_csv\":\n",
+    "        binary_skMI_screening_csv_parallel,\n",
+    "    \"continuous_skMI_screening_csv\":\n",
+    "        continuous_skMI_screening_csv_parallel,\n",
+    "    \"Pearson_screening_csv\":\n",
+    "        Pearson_screening_csv_parallel,\n",
+    "    \"binary_screening_dataframe\":\n",
+    "        binary_screening_dataframe_parallel,\n",
+    "    \"continuous_screening_dataframe\":\n",
+    "        continuous_screening_dataframe_parallel,\n",
+    "    \"binning_binary_screening_dataframe\":\n",
+    "        binning_binary_screening_dataframe_parallel,\n",
+    "    \"binning_continuous_screening_dataframe\":\n",
+    "        binning_continuous_screening_dataframe_parallel,\n",
+    "    \"binary_skMI_screening_dataframe\":\n",
+    "        binary_skMI_screening_dataframe_parallel,\n",
+    "    \"continuous_skMI_screening_dataframe\":\n",
+    "        continuous_skMI_screening_dataframe_parallel,\n",
+    "    \"Pearson_screening_dataframe\":\n",
+    "        Pearson_screening_dataframe_parallel,\n",
+    "    \"binary_screening_array\":\n",
+    "        binary_screening_array_parallel,\n",
+    "    \"continuous_screening_array\":\n",
+    "        continuous_screening_array_parallel,\n",
+    "    \"binary_skMI_array\":\n",
+    "        binary_skMI_array_parallel,\n",
+    "    \"continuous_skMI_array\":\n",
+    "        continuous_skMI_array_parallel,\n",
+    "    \"continuous_Pearson_array\":\n",
+    "        continuous_Pearson_array_parallel,\n",
+    "}\n",
+    "\n",
+    "\n",
+    "def dynamic_screening(\n",
+    "    input_data,\n",
+    "    screening_type,  # 'binary', 'continuous', etc.\n",
+    "    data_format,  # 'plink', 'csv', 'dataframe', 'array'\n",
+    "    **kwargs,\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    A dynamic function to call the appropriate screening function based on input type and arguments.\n",
+    "\n",
+    "    Parameters:\n",
+    "    input_data: DataFrame, CSV file path, PLINK file set, or numpy array\n",
+    "    screening_type: Type of screening to perform (e.g., 'binary', 'continuous')\n",
+    "    data_format: The format of the input data ('plink', 'csv', 'dataframe', 'array')\n",
+    "    kwargs: Additional keyword arguments to pass to the specific screening function\n",
+    "    \"\"\"\n",
+    "    # Construct the function name\n",
+    "    func_name = f\"{screening_type}_screening_{data_format}\"\n",
+    "\n",
+    "    # Retrieve the function from the function mapping\n",
+    "    screening_func = function_mapping.get(func_name)\n",
+    "    if screening_func:\n",
+    "        return screening_func(input_data, **kwargs)\n",
+    "    else:\n",
+    "        raise ValueError(f\"Function {func_name} not found in the mapping\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cbd99543",
    "metadata": {},
    "source": [
@@ -12487,6 +12574,13 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
